create Player component

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 		<title>Countdown</title>
 	</head>
 	<body>
+		<header>
+			<h1>Countdown to the last second!</h1>
+			<p>Stop the timer once you estimate that time is <em>almost</em> up</p>
+		</header>
 		<div id="root"></div>
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
