createPortal for modal

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>Countdown</title>
 	</head>
 	<body>
+		<div id="modal"></div>
 		<header>
 			<h1>Countdown to the last second!</h1>
 			<p>Stop the timer once you estimate that time is <em>almost</em> up</p>
